# cliappatra

./: README.rst  pyproject.toml
src/cliappatra/: actions.py  core.py  models.py  parsers.py  utils.py
src/cliopatra/: core.py
src/pydanticli/: __init__.py
tests/: test_cliopatra.py
