[tool.poetry]
name = "pydanticli"
version = "0.1.0"
description = "A pydantic argparse for CLI programs."
authors = ["Renato Damas <me@renatodamas.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/pydanticli"
documentation = ""
keywords = [
    "pydanticli",
    "pydantic",
    "cli",
    "argparse",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
